[package]
name = "lumiere"
version = "0.2.0"
edition = "2021"
description = "A ray-tracing implementation in Rust, based on Peter Shirley's \"Ray Tracing in One Weekend\" series."
repository = "https://github.com/calebfletcher/lumiere"
license = "MIT"
default-run = "lumiere"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
png = "0.17.2"
indicatif = "0.16.2"
noise = "0.7.0"